php-src/ext/date/tests/bug75002.out
Failed loading /opt/php-7.1/lib/php/extensions/debug-non-zts-20160303/xdebug.so:  /opt/php-7.1/lib/php/extensions/debug-non-zts-20160303/xdebug.so: cannot open shared object file: No such file or directory

Fatal error: Uncaught Error: DatePeriod has not been initialized correctly in /root/php-src/ext/date/tests/bug75002.php:9
Stack trace:
#0 {main}
  thrown in /root/php-src/ext/date/tests/bug75002.php on line 9